# githubtest

character_code/01hex/: 你好世界unicode.txt  大.txt
character_code/02chinese/01chinese/: 01chinese.cpp
character_code/03toutf8/code/untitled/: mainwindow.cpp  untitled.pro
character_code/04writefile/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  writexmltest.xml
character_code/05dump/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp
character_code/06wstring/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp
cmake_qt_test/: CMakeLists.txt  TestWidget.cpp  TestWidget.h  TestWidget.ui
rapidxmltest/readxmltest/readxmltest/: readxmltest.cpp
