cmake_minimum_required(VERSION 3.5)

project (TestWidget)

set(CMAKE_PREFIX_PATH D:/software/Qt5.11.2/5.11.2/msvc2017_64)


FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)


# sources
SET(TESTWIDGET_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/TestWidget.cpp
)


# headers
SET(TESTWIDGET_HEADERS
	${CMAKE_CURRENT_SOURCE_DIR}/TestWidget.h	
)

set (MyProjectLib_ui  ${PROJECT_SOURCE_DIR}/TestWidget.ui)

#moc headers
#SET(TESTWIDGET_MOC_HEADERS   
#	${CMAKE_CURRENT_SOURCE_DIR}/TestWidget.h	
#)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)

#set(CMAKE_INCLUDE_CURRENT_DIR ON)

#QT5_WRAP_CPP(TESTWIDGET_MOC_SRCS ${TESTWIDGET_MOC_HEADERS})
#qt5_wrap_ui (TESTWIDGET_UI_MOC_SRCS  ${MyProjectLib_ui})


#资源文件
SET(IMAGE_RCCS ${CMAKE_CURRENT_SOURCE_DIR}/TestWidget.qrc)
QT5_ADD_RESOURCES(IMAGE_RCC_SRCS ${IMAGE_RCCS})


#包含目录
INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_BINARY_DIR}	
)

#系统包含目录
#INCLUDE_DIRECTORIES(SYSTEM ${Qt5Core_INCLUDE_DIRS} ${Qt5Gui_INCLUDE_DIRS})

#库目录${CMAKE_SOURCE_DIR}/external/OSGeo4W/lib
LINK_DIRECTORIES( ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} )



################################################################################################

#SET(QT_USE_QTMAIN TRUE)

#生成exe,WIN32会自动生成窗口程序，不加win32也可以显示窗口，不过同时也会显示一个Doc窗口
#ADD_EXECUTABLE(TestWidget WIN32 ${TESTWIDGET_HEADERS} ${TESTWIDGET_SRCS} ${IMAGE_RCC_SRCS} ${TESTWIDGET_MOC_SRCS} ${TESTWIDGET_MOC_HEADERS} ${TESTWIDGET_UI_MOC_SRCS} ${QM_FILES} )
ADD_EXECUTABLE(TestWidget   ${TESTWIDGET_HEADERS} ${TESTWIDGET_SRCS}  ${MyProjectLib_ui} ${IMAGE_RCC_SRCS}  ${QM_FILES} )

#链接库
TARGET_LINK_LIBRARIES( TestWidget  
  ${Qt5Widgets_LIBRARIES}
  ${Qt5Core_QTMAIN_LIBRARIES}
)

SET_PROPERTY(TARGET TestWidget PROPERTY CXX_STANDARD 17)
